--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
 
 dependencies {
 
+    def lottieVersion = "6.0.0"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -56,4 +58,6 @@ dependencies {
     implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
     //sweetAlertDialog:
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+    //lottie animation
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
